--- a/index.html
+++ b/index.html
@@ -38,28 +38,28 @@
 			<p>Next you will find table of contents. To jump to the section, click on the header.</p>
 			<ul class="level1">
 				<li><a href="#goal">Goal</a></li>
-				<li>Dataset</li>
+				<li><a href="#dataset">Dataset</a></li>
 					<ul class="level2">
-						<li>IMDB</li>
-						<li>User reviews</li>
-						<li>OMDB</li>
-						<li>Summary</li>
+						<li><a href="#imdb">IMDB</a></li>
+						<li><a href="#user-reviews">User reviews</a></li>
+						<li><a href="#omdb">OMDB</a></li>
+						<li><a href="#summary">Summary</a></li>
 			     		</ul>
-			    	<li>Network analysis</li>
+				<li><a href="#network-analysis">Network analysis</a></li>
 					<ul class="level2">
-						<li>Network representation</li>
-						<li>Statistics</li>
-						<li>Centrality</li>
-						<li>Assortativity</li>
-						<li>Communities</li>
+						<li><a href="#network-representation">Network representation</a></li>
+						<li><a href="#statistics">Statistics</a></li>
+						<li><a href="#centrality">Centrality</a></li>
+						<li><a href="#assortativity">Assortativity</a></li>
+						<li><a href="#communities">Communities</a></li>
 			     		</ul>
-			      	<li>Text analysis</li>
+				<li><a href="#text-analysis">Text analysis</a></li>
 					<ul class="level2">
-						<li>Keywords</li>
-						<li>Keywords vs. plots</li>
-						<li>User reviews</li>
+						<li><a href="#keywords">Keywords</a></li>
+						<li><a href="#keywords-vs-plots">Keywords vs. plots</a></li>
+						<li><a href="#user-reviews">User reviews</a></li>
 			     		</ul>
-				<li>Further information</li>
+				<li><a href="#further-information">Further information</a></li>
 			</ul>
 			<h2><a aria-hidden="true" class="anchor" href="#goal" id="goal"><span aria-hidden="true" class="octicon octicon-link"></span></a>Goal</h2>
 			<blockquote>
